# CSA-CPU-Architecture-Lisp

./: .gitignore  README.md  golden_test.py  pyproject.toml  simulation.py  translator.py
code_files/: cat.lisp  hello.lisp  hello_user.lisp  prob1.lisp
code_out/: cat.o.mnem  cat.out  cat.out.mnem  hello.o.mnem  hello.out  hello.out.mnem  hello_user.o.mnem  hello_user.out.mnem  prob1.o.mnem  prob1.out  prob1.out.mnem
machine/: control_unit.py  datapath.py  isa.py
tests/: cat.yml  hello.yml  hello_user.yml  prob1.yml
